Prevent "flickering" effects when hovering over menu elements that cause the page to lengthen and require a scrollbar.

--- a/themes/_administration/style.css
+++ b/themes/_administration/style.css
@@ -1,11 +1,8 @@
-/**
+/*
  * Style for Admistration pages
  *
- * Use this stylesheet to customize the display of your site.
- * To learn more about CSS visit http://www.w3.org/TR/REC-CSS2/
- *
- * webtrees:Web based Family History software
- * Copyright (C) 2010 to 2011 webtrees development team.
+ * webtrees: Web based Family History software
+ * Copyright (C) 2011 webtrees development team.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -21,10 +18,11 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
  *
- * @package webtrees
- * @subpackage Administration
- * @version $Id$
+ * $Id$
  */
+
+/* Add a permanent scrollbar, to prevent "flickering" when hover effects lengthen page */
+html { overflow-y:scroll; }
 
 /* general styles */
 body {font-family:Trebuchet MS, Tahoma, Verdana, Arial, sans-serif; font-size:12px; margin:10px; min-width:800px;}
