--- a/themes/clouds/style.css
+++ b/themes/clouds/style.css
@@ -1,16 +1,32 @@
 /*
- * Copyright (c) 2011 Rob Peters
+ * Style for clouds theme
+ *
+ * webtrees: Web based Family History software
+ * Copyright (C) 2011 webtrees development team.
  *
  * Derived from PhpGedView Cloudy theme
  * Original author w.a. bastein http://genealogy.bastein.biz
  * Copyright (C) 2010  PGV Development Team.  All rights reserved.
  *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
+ *
  * $Id$
-*/
+ */
 
-.something {
-/*empty style to make sure that the BODY style is not ignored */
-}
+/* Add a permanent scrollbar, to prevent "flickering" when hover effects lengthen page */
+html { overflow-y:scroll; }
 
 body {
 	color: #000066;
