--- a/themes/colors/css/bluemarine.css
+++ b/themes/colors/css/bluemarine.css
@@ -6,9 +6,8 @@
 * $Id$
 */
 
-.something {
-/*empty style to make sure that the BODY style is not ignored */
-}
+/* Add a permanent scrollbar, to prevent "flickering" when hover effects lengthen page */
+html { overflow-y:scroll; }
 
 body {
 font: 12px tahoma, arial, helvetica, sans-serif;
