--- a/themes/minimal/style.css
+++ b/themes/minimal/style.css
@@ -1,8 +1,5 @@
-/**
+/*
  * Style for Minimal theme
- *
- * Use this stylesheet to customize the display of your site.
- * To learn more about CSS visit http://www.w3.org/TR/REC-CSS2/
  *
  * webtrees: Web based Family History software
  * Copyright (C) 2011 webtrees development team.
@@ -24,10 +21,12 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
  *
- * @package webtrees
- * @subpackage Themes
- * @version $Id$
+ * $Id$
  */
+
+/* Add a permanent scrollbar, to prevent "flickering" when hover effects lengthen page */
+html { overflow-y:scroll; }
+
 body {
 	color: black;
 	background-color: white;
